--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,11 @@ services:
       KAFKA_BROKERCONNECT: kafka:29092	
 
 # Cassandra
-cassandra:
+  cassandra:
     image: cassandra:latest
     container_name: cassandra
+    networks:
+      - network1
     ports:
       - 9042:9042
     environment:
@@ -64,37 +66,74 @@ cassandra:
     volumes:
       - ./:/home
       - cassandra-data:/var/lib/cassandra
+    healthcheck:
+      test: ["CMD-SHELL", "cqlsh -u cassandra -p cassandra -e 'describe keyspaces'"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
+# Cassandra setup (keyspace/table creation)
+  cassandra-setup:
+    image: python:3.9-slim
+    container_name: cassandra-setup
+    networks:
+      - network1
+    volumes:
+      - ./src/initCassandra.py:/initCassandra.py
+    command: >
+      sh -c "pip install cassandra-driver && python /initCassandra.py"
+    depends_on:
+      - cassandra
 
 # Spark streaming
-spark-master:
-  image: spark:1
-  environment:
-    - SPARK_MODE=master
-    - SPARK_RPC_AUTHENTICATION_ENABLED=no
-    - SPARK_RPC_ENCRYPTION_ENABLED=no
-    - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-    - SPARK_SSL_ENABLED=no
-  ports:
-    - '8090:8080'
-  volumes:
-  - /var/run/docker.sock:/var/run/docker.sock
+  spark-master:
+    image: spark:latest
+    depends_on:
+      cassandra:
+        condition: service_healthy
+    networks:
+      - network1
+    # these are the default for bitnami image
+    # environment:
+    #   - SPARK_MODE=master
+    #   - SPARK_RPC_AUTHENTICATION_ENABLED=no
+    #   - SPARK_RPC_ENCRYPTION_ENABLED=no
+    #   - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+    #   - SPARK_SSL_ENABLED=no
+    ports:
+      - '8080:8080'
+      - '7077:7077'
+    # start the deamon directly 
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master --host spark-master --port 7077 --webui-port 8080
+    # volumes:
+    # - /var/run/docker.sock:/var/run/docker.sock
 
-spark-worker:
-  image: spark:1
-  environment:
-    - SPARK_MODE=worker
-    - SPARK_MASTER_URL=spark://spark-master:7077
-    - SPARK_WORKER_MEMORY=4G
-    - SPARK_WORKER_CORES=1
-    - SPARK_RPC_AUTHENTICATION_ENABLED=no
-    - SPARK_RPC_ENCRYPTION_ENABLED=no
-    - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-    - SPARK_SSL_ENABLED=no
-  volumes:
-  - /var/run/docker.sock:/var/run/docker.sock
-
+  spark-worker:
+    image: spark:latest
+    depends_on:
+      - spark-master
+    networks:
+      - network1
+    # environment:
+    #   - SPARK_MODE=worker
+    #   - SPARK_MASTER_URL=spark://spark-master:7077
+    #   - SPARK_WORKER_MEMORY=4G
+    #   - SPARK_WORKER_CORES=1
+    #   - SPARK_RPC_AUTHENTICATION_ENABLED=no
+    #   - SPARK_RPC_ENCRYPTION_ENABLED=no
+    #   - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+    #   - SPARK_SSL_ENABLED=no
+    ports:
+      - '8081:8081'
+    # Start the Worker daemon and point it to the Master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077 --webui-port 8081
+    # volumes:
+    # - /var/run/docker.sock:/var/run/docker.sock
 
 networks:
   network1:
     name: mynetwork
     driver: bridge
+
+volumes:
+  cassandra-data:
